--- a/关于SEO（蜘蛛抓取网站）/说明.md
+++ b/关于SEO（蜘蛛抓取网站）/说明.md
@@ -11,3 +11,68 @@
 </ul>
 
 <a href="http://baijiahao.baidu.com/s?id=1551718719900275&wfr=spider&for=pc">吴平好网站整体优化文章</a>
+
+## html 结构
+
+1.优化html标签
+
+    不要什么都用div，尽量合理的使用ul、ol、table等
+2.meta描述
+
+    可定义关键词、网站描述等
+    < meta name="keywords" content="关键词1，关键词2" />
+    < meta name="description" content="描述1，描述2" />
+
+
+
+3.前景图片<img />添加alt属性、这个比较重要，有很多适用场景
+
+     <img src="" alt="图片描述" />
+
+     适用场景：（1）当图片未成功显示时候，仍可以显示文本，用户也可以大致了解图片主题
+
+        （2）当图片成功显示的时候，鼠标以上图片，可显示图片描述
+
+        （3）可解决网速慢、src引用错误、浏览器禁用图像、用户使用屏幕阅读器等情况
+
+
+
+4、前景图片<img /> 要定义大小、不然会造成页面重新渲染，影响加载速度
+
+    <img src="" width=" "  height="" />
+
+
+
+5、可以适当的给链接标签a添加 rel="nofollow" 属性(例如：当我们项目的某一个导航不需要蜘蛛跟踪链接)
+
+    <a href="#"  ref="nofollow" >不需要跟踪的导航</a>
+
+    作用：（1）引导爬虫抓取一些有用的信息页面，提高爬虫的抓取效率
+
+    （2）防止一些不可信内容，防止页面指向一下垃圾站点和页面
+
+6.内链采用绝对路径，减少服务器的响应时间
+
+    例如：<a href="www.taobao.com">淘宝网首页</a>
+
+    不要采用<a  href="/index.html"></a>
+    
+7.导航栏的层级数不宜太深
+
+8、那就是SVG啦，因为svg图像的源文件是一个文本文件，有利于访问
+
+9、还有小伙伴们，注意啦，页面跳转尽量使用<a href="#"></a>，不要使用<div onclick=""></div>
+
+以上内容转载于 Take_Dream[前端SEO优化的一些解决方案](https://blog.csdn.net/Take_Dream_as_Horse/article/details/53064508)一文
+## 注意事项
+
+1. 关键词密度
+
+    关键词密度的说法：
+        1.尽量保持在2%-8%；
+        2.只要关键词出现的位置有助于蜘蛛或用户理解，尽量多出现，不在乎密度
+        （这两个说法还待考察）
+
+2. 网站内容支持原创，尽量少采集
+
+    无论是用户还是蜘蛛都会喜欢原创而不是抄袭；
